# pyVBCam

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  conda_requirements.txt  crontab.txt  environment.yml  pip_requirements.txt  pyproject.toml  settings.json-in  setup.cfg  setup.py
.github/workflows/: build.yml
config/: pyvbam_vhost.conf
htdocs/: live.py
pywebcam/: lapse.py  utils.py  vbcam.py  webcam.py
scripts/: .gitignore  ADD_WEBCAM.sql  FIRE.csh  acquireRT.py  acquire_realtime.py  check_environment.py  check_python.py  common.py  daily_cleanup.sh  dl_archive4lapse.py  do_auto_lapse.py  driveAutos.py  drive_autos.py  fire.py  four_panel_sync_lapse.py  getStill4web.py  get_still_image.py  iemSync.py  inject.py  longLapse.py  long_lapse.py  panaramic.py  panel16.py  print_settings.py  sans_night_giveme.py  secret.py  secret.txt  setAutoLapseTimes.py  setHome.py  setTimes.py  set_autolapse_times.py  settings.ini-in  siteAutoDrive.py  slowly_pan.py  stitch3_isu.py  stitch4.py  sunCalibrate.py  sun_calibrate.py  trackSunMoon.py  track_sun_moon.py  (+1 more)
src/pyvbcam/: __init__.py  lapse.py  utils.py  vbcam.py  webcam.py
tests/: test_basic.py  test_lapse.py  test_utils.py  test_vapix.py  test_webcam.py
vbcam/: lapse.py  vbcam.py
