[metadata]
name = pyVBCam
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/pyVBCam
keywords = meteorology
license = Apache
license-file = LICENSE
description = Collection of things to interface with IP webcams.
description-file = README.md

[pep8]
ignore = W503

[aliases]
test = pytest

[bdist_rpm]
release = 0
requires = python > 2.6
	python-psycopg2 > 2
	pytz >= 2010h

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src
